# claude-code-prompt-training

./: LICENSE  README.md  claude-code-prompt-training.md  day1-fundamentals.md  day2-task-decomposition.md  day3-context-constraints.md  day4-code-specific-patterns.md  day5-advanced-techniques.md  day6-debugging-failures.md  day7-real-projects.md  prompt-template-library.md
ai-drug-discovery/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
ai-drug-discovery/.github/workflows/: compose-smoke.yml
ai-drug-discovery/alembic/: env.py
ai-drug-discovery/alembic/versions/: 20260120_150735_bf1b8634051d_add_auth_models.py  20260120_151526_4039686027fc_add_api_keys_table.py  20260120_160000_a1b2c3d4e5f6_add_discovery_models.py  20260121_100000_b2c3d4e5f6g7_add_fingerprint_storage.py  20260122_100000_c3d4e5f6g7h8_add_upload_tables.py  20260123_100000_add_ml_registry_models.py
ai-drug-discovery/apps/api/: config.py  db.py  dependencies.py  main.py  ratelimit.py  redis_client.py  storage.py
ai-drug-discovery/apps/api/auth/: dependencies.py  models.py  schemas.py  security.py  service.py
ai-drug-discovery/apps/api/connectors/: __init__.py  base.py  cache.py  chembl.py  exceptions.py  pubchem.py  schemas.py  settings.py  uniprot.py
ai-drug-discovery/apps/api/routers/: __init__.py  api_keys.py  auth.py  db_check.py  health.py  molecules.py  predictions.py  projects.py  redis_check.py  targets.py  (+1 more)
ai-drug-discovery/db/: __init__.py  base.py  session.py
ai-drug-discovery/db/models/: __init__.py  base_model.py  discovery.py  ml_registry.py  upload.py
ai-drug-discovery/docs/: FINGERPRINT_INDEXING.md
ai-drug-discovery/examples/: __init__.py  chembl_usage.py  drugbank_usage.py  pubchem_usage.py  uniprot_usage.py
ai-drug-discovery/scripts/: cold_start_check.sh  docker-entrypoint.sh  smoke_compose.sh  wait-for-services.py
ai-drug-discovery/tests/: conftest.py  test_api_keys.py  test_audit_fields.py  test_auth_flows.py  test_batch_import.py  test_connector_chembl.py  test_connector_drugbank.py  test_connector_pubchem.py  test_connector_uniprot.py  test_connectors_base.py  test_features.py  test_fingerprints.py  test_health.py  test_migrations.py  test_molecule_identity.py  test_multitenancy.py  test_openapi_docs.py  test_password_reset.py  test_processing_storage.py  test_rate_limit.py  test_rbac.py  test_rdkit_descriptors.py  test_redis_connectivity.py  test_relationships.py  test_render.py  test_schema_migrations.py  test_sdf_parser.py  test_similarity.py  test_smiles.py  test_smoke.py  test_soft_delete.py  test_upload_csv_mapping.py  test_upload_duplicates.py  test_upload_happy_path.py  test_upload_validation_robustness.py  test_uploads.py
ai-drug-discovery/tests/api/: test_health.py
(+29 files in other folders)
